Bug 777883 - Avoid calling glLinkProgram when we know that a bad shader is attached - r=jgilbert